--- a/about.html
+++ b/about.html
@@ -14,39 +14,44 @@
         </nav>
     </header>
     <main>
-        <h2>Kimman?</h2>
-        <p>Mening ismim Diyorbek Jumanov. Men dasturchiman va veb-saytlar yaratish bilan shug'ullanaman.</p>
-        <p>Texnologiyalarga qiziqaman va yangi bilimlarni o'rganishni yoqtiraman. Bo'sh vaqtimda kitob o'qiyman va shaxsiy loyihalar ustida ishlayman.</p>
+        <article>
+            <section>
+                <h2>Kimman?</h2>
+                <p>Mening ismim Diyorbek Jumanov. Men dasturchiman va veb-saytlar yaratish bilan shug'ullanaman.</p>
+                <p>Texnologiyalarga qiziqaman va yangi bilimlarni o'rganishni yoqtiraman. Bo'sh vaqtimda kitob o'qiyman va shaxsiy loyihalar ustida ishlayman.</p>
+                <img src="about_me.jpg" alt="Men haqimda rasm" width="400">
+            </section>
+            <section>
+                <h3>Ko'nikmalarim</h3>
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>Texnologiya</th>
+                            <th>Daraja</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Python</td>
+                            <td>Yuqori</td>
+                        </tr>
+                        <tr>
+                            <td>C</td>
+                            <td>O'rta</td>
+                        </tr>
+                        <tr>
+                            <td>Django</td>
+                            <td>Yuqori</td>
+                        </tr>
+                        <tr>
+                            <td>HTML/CSS</td>
+                            <td>O'rta</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </article>
     </main>
-    <img src="about_me.jpg" alt="Men haqimda rasm" width="400">
-        
-    <h3>Ko'nikmalarim</h3>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Texnologiya</th>
-                <th>Daraja</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Python</td>
-                <td>Yuqori</td>
-            </tr>
-            <tr>
-                <td>C</td>
-                <td>O'rta</td>
-            </tr>
-            <tr>
-                <td>Django</td>
-                <td>Yuqori</td>
-            </tr>
-            <tr>
-                <td>HTML/CSS</td>
-                <td>O'rta</td>
-            </tr>
-        </tbody>
-    </table>
     <footer>
         <p>&copy; 2025 Diyorbek Jumanov. Barcha huquqlar himoyalangan.</p>
     </footer>
